k8s-specifications/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: db-service
    port: 5432
    targetPort: 5432
  selector:
    app: db
